# tiny_lang_parser_rust

./: Cargo.toml  Makefile  README.md  tiny_lang.pest
src/: lib.rs  main.rs  tiny_lang.pest
src/parser/: mod.rs
test_data/: powers.txt
tests/: interptests.rs  parser_tests.rs
